---------------------------------------------------------------------------------------------------
Version: 0.0.3
Date: ????
  Info:
    - Tint the thruster interface purple
    - Place and link the infinity pipes again
    - Give the thruster interface a cute little nub
    - Tweak fluid consumption to always display 120/s
    - Hide fluid icons
    - Hide the infinity pipes
---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: 2025. 02. 19
  Info:
    - Rename creative thruster to thruster interface
    - Get the thruster performance curve to show
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2025. 02. 16
  Info:
    - Initial commit