@@ -8,6 +8,7 @@ Date: ????
     - Tweak fluid consumption to always display 120/s
     - Hide fluid icons
     - Hide the infinity pipes
+    - Make a struct for the entity and its pipes
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.2
 Date: 2025. 02. 19
